--- a/index2.html
+++ b/index2.html
@@ -5,83 +5,100 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="Assets/css/style.css">
     <title>Profesional Portfolio</title>
 </head>
-<body class="p-2 d-flex flex-column align-content-center ">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<body class="p-2 d-flex flex-column align-content-center bg-secondary">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid float-left">
-            <a class="navbar-brand" href="#">Kevin Ryner</a>
+            <a class="navbar-brand text fs-1" href="#">Kevin Ryner</a>
           </div>
           <div class="container-fluid float-right">
-            <a class="navbar-brand" href="#about">About Me</a>
             <a class="navbar-brand" href="#">Portfolio</a>
             <a class="navbar-brand" href="#">Contact Me</a>
             <a class="navbar-brand" href="https://github.com/kevinjr1998">GitHub</a>
+            <a class="navbar-brand" href="https://www.linkedin.com/in/kevin-ryner-1a357b19b/">linkedin</a>
           </div>
     </nav>
-    <div class="jumbotron d-inline-flex flex-column align-items-center align-self-center border">
+
+    
+
+    <div class="jumbotron d-inline-flex flex-column justify justify-content-center align-items-center align-self-center border rounded m-3" >
         <h1 class="display-4">Project: Holiday Planner </h1>
         <img src="./Assets/images/screen.gif " class="img-fluid img-thumbnail" alt="Holiday Planner">
         <div class="d-inline-flex flex-column align-items-center">
-          <a class="btn btn-primary" href="https://github.com/MehdiMahmud79/Holiday-Planner"> Link to GitHub Repository </a>
-          <a class="btn btn-primary" href="https://mehdimahmud79.github.io/Holiday-Planner/"> Link to Deployed Application</a>
+          <a class="btn btn-primary m-2" href="https://github.com/MehdiMahmud79/Holiday-Planner"> Link to GitHub Repository </a>
+          <a class="btn btn-primary m-2" href="https://mehdimahmud79.github.io/Holiday-Planner/"> Link to Deployed Application</a>
         </div>
     </div>
-    <div class="container d-inline-flex align-self-center justify-content-between">
-        <div class="row">
-          <div class="col-sm">
+    <div class="container d-inline-flex align-self-center justify-content-center border rounded m-3">
+        <div class="row d-flex flex-wrap justify-content-between" style = "height: 25rem">
+          <div class="col-sm-6">
             <div class="card" style="width: 18rem;">
-                <img src="./Assets/images/Code_Quiz_Screenshot.png" class="card-img-top" alt="Code_Quiz_Screenshot">
+                <img src="./Assets/images/Code_Quiz_Screenshot.png" class="card-img-top img-fluid" alt="Code_Quiz_Screenshot">
                 <div class="card-body">
                   <h5 class="card-title text-center"> Code Quiz </h5>
-                  <a href="https://github.com/kevinjr1998/Code_Quiz" class="btn btn-primary text-center"> Link to GitHub Repository</a>
-                  <a href="https://kevinjr1998.github.io/Code_Quiz/" class="btn btn-primary text-center"> Link to Deployed Application</a>
+                  <a href="https://github.com/kevinjr1998/Code_Quiz" class="btn btn-primary text-center m-2"> Link to GitHub Repository</a>
+                  <a href="https://kevinjr1998.github.io/Code_Quiz/" class="btn btn-primary text-center m-2"> Link to Deployed Application</a>
                 </div>
               </div>
           </div>
-          <div class="col-sm">
+          <div class="col-sm-6">
             <div class="card" style="width: 18rem;">
-                <img src="./Assets/images/Weather-Dashboard.png" class="card-img-top" alt="Weather_Dashboard">
+                <img src="./Assets/images/Weather-Dashboard.png" class="card-img-top img-fluid" alt="Weather_Dashboard">
                 <div class="card-body">
                   <h5 class="card-title text-center"> Weather Dashboard</h5>
                   <div class="d-inline-flex flex-column align-items-center">
-                      <a href="https://github.com/kevinjr1998/Weather_Dashboard" class="btn btn-primary text-center"> Link to GitHub Repository</a>
-                      <a href="https://kevinjr1998.github.io/Weather_Dashboard/" class="btn btn-primary text-center"> Link to Deployed Application</a>
+                      <a href="https://github.com/kevinjr1998/Weather_Dashboard" class="btn btn-primary text-center m-2"> Link to GitHub Repository</a>
+                      <a href="https://kevinjr1998.github.io/Weather_Dashboard/" class="btn btn-primary text-center m-2 "> Link to Deployed Application</a>
                   </div>
                 </div>
               </div>
           </div>
         </div>
     </div>
-    <div class="container d-flex align-self-center">
-        <div class="row">
-            <div class="col-sm">
+    <div class="container d-inline-flex align-self-center justify-content-center border rounded m-3 p-3">
+        <div class="row d-flex flex-wrap  justify-content-between" >
+            <div class="col-sm-6">
                 <div class="card" style="width: 18rem;">
-                    <img src="./Assets/images/Password_Generator_Screenshot.png" class="card-img-top" alt="Password_Generator_Screenshot">
+                    <img src="./Assets/images/Password_Generator_Screenshot.png" class="card-img-top img-fluid " alt="Password_Generator_Screenshot">
                     <div class="card-body">
                       <h5 class="card-title text-center"> Password Generator</h5>
                       <div class="d-inline-flex flex-column align-items-center">
-                          <a href="https://github.com/kevinjr1998/Password_Generator" class="btn btn-primary text-center"> Link to GitHub Repository</a>
-                          <a href="https://kevinjr1998.github.io/Password_Generator/" class="btn btn-primary text-center"> Link to Deployed Application</a>
+                          <a href="https://github.com/kevinjr1998/Password_Generator" class="btn btn-primary text-center m-2"> Link to GitHub Repository</a>
+                          <a href="https://kevinjr1998.github.io/Password_Generator/" class="btn btn-primary text-center m-2"> Link to Deployed Application</a>
                       </div>
                     </div>
                   </div>
             </div>
-            <div class="col-sm">
+            <div class="col-sm-6">
                 <div class="card" style="width: 18rem;">
-                    <img src="./Assets/images/Day_Planner_Screenshot.png" class="card-img-top" alt="Work_Day Scheduler">
+                    <img src="./Assets/images/Day_Planner_Screenshot.png" class="card-img-top img-fluid" alt="Work_Day Scheduler">
                     <div class="card-body">
                       <h5 class="card-title text-center"> Work Day Scheduler</h5>
                       <div class="d-inline-flex flex-column align-items-center">
-                          <a href="https://github.com/kevinjr1998/Work_Day_Scheduler" class="btn btn-primary text-center"> Link to GitHub Repository</a>
-                          <a href="https://kevinjr1998.github.io/Work_Day_Scheduler/" class="btn btn-primary text-center"> Link to Deployed Application</a>
+                          <a href="https://github.com/kevinjr1998/Work_Day_Scheduler" class="btn btn-primary text-center m-2"> Link to GitHub Repository</a>
+                          <a href="https://kevinjr1998.github.io/Work_Day_Scheduler/" class="btn btn-primary text-center m-2"> Link to Deployed Application</a>
                       </div>
                     </div>
                   </div>
             </div>
       </div>
     </div>
-
+    <div id="contact ">
+        <aside>
+            <h2> Contact: </h2>
+        </aside>
+    
+        <section class="Main_Content d-flex flex-wrap">
+                <p class = "p-2 text-center"> Mobile Number: 07597 087862 </p>
+                <p class = "p-2 text-center"> Email: <a href="mailto:kevinryner@yahoo.co.uk"> kevinryner@yahoo.co.uk </a></p>
+                <p class = "p-2 text-center"> CV: <a href=""> </a></p>
+        </section>
+    </div>
+    <footer class="d-flex justify-content-center">
+        <h3 class="text-center"> Made By Kevin Ryner </h3>
+    </footer>
 
 
 
