--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
 
     <div id="#portfolio" class="jumbotron bg-light d-inline-flex flex-column justify justify-content-center align-items-center align-self-center border rounded m-3" style = "width: auto;" >
         <h1 class="display-4">Project: Holiday Planner </h1>
-        <img src="./Assets/images/screen.gif " class="img-fluid img-thumbnail" alt="Holiday Planner">
+        <img src="./Assets/images/my5SLocal.PNG " class="img-fluid img-thumbnail" alt="My-5-Star-Local">
         <div class="d-inline-flex flex-column align-items-center">
-          <a class="btn btn-primary m-2" href="https://github.com/MehdiMahmud79/Holiday-Planner"> Link to GitHub Repository </a>
-          <a class="btn btn-primary m-2" href="https://mehdimahmud79.github.io/Holiday-Planner/"> Link to Deployed Application</a>
+          <a target= "_blank" class="btn btn-primary m-2" href="https://github.com/kevinjr1998/My-5-Star-Local"> Link to GitHub Repository </a>
+          <a target= "_blank" class="btn btn-primary m-2" href="https://vast-journey-10843.herokuapp.com/"> Link to Deployed Application</a>
         </div>
     </div>
     <div class="container d-inline-flex align-self-center justify-content-center border-0 rounded m-3">
         <div class="row d-flex flex-wrap justify-content-between" style = "height: auto">
           <div class="col-sm-6 my-3">
             <div class="card " style="width: auto; height: 100%;">
-                <img src="./Assets/images/Code_Quiz_Screenshot.png" class="card-img-top img-fluid" alt="Code_Quiz_Screenshot">
+                <img src="./Assets/images/techBlogGif.gif" class="card-img-top img-fluid" alt="Tech_Blog_Gif">
                 <div class="card-body d-flex flex-column justify-content-end">
                   <h5 class="card-title text-center "> Code Quiz </h5>
-                  <a href="https://github.com/kevinjr1998/Code_Quiz" class="btn btn-primary text-center m-2"> Link to GitHub Repository</a>
-                  <a href="https://kevinjr1998.github.io/Code_Quiz/" class="btn btn-primary text-center m-2"> Link to Deployed Application</a>
+                  <a target="_blank" href="https://github.com/kevinjr1998/Tech_Blog" class="btn btn-primary text-center m-2"> Link to GitHub Repository</a>
+                  <a target="_blank" href="https://peaceful-basin-57768.herokuapp.com/" class="btn btn-primary text-center m-2"> Link to Deployed Application</a>
                 </div>
               </div>
           </div>
@@ -52,8 +52,8 @@
                 <div class="card-body d-flex flex-column justify-content-end">
                   <h5 class="card-title text-center"> Weather Dashboard</h5>
                   <div class="d-inline-flex flex-column">
-                      <a href="https://github.com/kevinjr1998/Weather_Dashboard" class="btn btn-primary text-center m-2"> Link to GitHub Repository</a>
-                      <a href="https://kevinjr1998.github.io/Weather_Dashboard/" class="btn btn-primary text-center m-2 "> Link to Deployed Application</a>
+                      <a target="_blank" href="https://github.com/kevinjr1998/Weather_Dashboard" class="btn btn-primary text-center m-2"> Link to GitHub Repository</a>
+                      <a target="_blank"  href="https://kevinjr1998.github.io/Weather_Dashboard/" class="btn btn-primary text-center m-2 "> Link to Deployed Application</a>
                   </div>
                 </div>
               </div>
@@ -64,12 +64,12 @@
         <div class="row d-flex flex-wrap  justify-content-between" >
             <div class="col-sm-6 my-3">
                 <div class="card"  style="width: auto; height: 100%;">
-                    <img src="./Assets/images/Password_Generator_Screenshot.png" class="card-img-top img-fluid " alt="Password_Generator_Screenshot">
+                    <img src="./Assets/images/Note_Taker_Screenshot.png" class="card-img-top img-fluid " alt="Password_Generator_Screenshot">
                     <div class="card-body d-flex flex-column justify-content-end">
                       <h5 class="card-title text-center"> Password Generator</h5>
                       <div class="d-inline-flex flex-column justify-content-center">
-                          <a href="https://github.com/kevinjr1998/Password_Generator" class="btn btn-primary text-center m-2"> Link to GitHub Repository</a>
-                          <a href="https://kevinjr1998.github.io/Password_Generator/" class="btn btn-primary text-center m-2"> Link to Deployed Application</a>
+                          <a target="_blank" href="https://github.com/kevinjr1998/Note_Taker" class="btn btn-primary text-center m-2"> Link to GitHub Repository</a>
+                          <a target="_blank" href="https://stark-headland-34041.herokuapp.com/" class="btn btn-primary text-center m-2"> Link to Deployed Application</a>
                       </div>
                     </div>
                   </div>
