--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div id="#portfolio" class="jumbotron bg-light d-inline-flex flex-column justify justify-content-center align-items-center align-self-center border rounded m-3" style = "width: auto;" >
         <h1 class="display-4">Project: Holiday Planner </h1>
-        <img src="./Assets/images/my5SLocal.PNG " class="img-fluid img-thumbnail" alt="My-5-Star-Local">
+        <img src="./Assets/images/my5StarLocal.gif " class="img-fluid img-thumbnail" alt="My-5-Star-Local">
         <div class="d-inline-flex flex-column align-items-center">
           <a target= "_blank" class="btn btn-primary m-2" href="https://github.com/kevinjr1998/My-5-Star-Local"> Link to GitHub Repository </a>
           <a target= "_blank" class="btn btn-primary m-2" href="https://vast-journey-10843.herokuapp.com/"> Link to Deployed Application</a>
@@ -48,7 +48,7 @@
           </div>
           <div class="col-sm-6 my-3">
             <div class="card "  style="width: auto; height: 100%;">
-                <img src="./Assets/images/Weather-Dashboard.png" class="card-img-top img-fluid" alt="Weather_Dashboard">
+                <img src="./Assets/images/Weather_Dashboard.gif" class="card-img-top img-fluid" alt="Weather_Dashboard">
                 <div class="card-body d-flex flex-column justify-content-end">
                   <h5 class="card-title text-center"> Weather Dashboard</h5>
                   <div class="d-inline-flex flex-column">
@@ -76,7 +76,7 @@
             </div>
             <div class="col-sm-6 my-3">
                 <div class="card"  style="width: auto; height: 100%;">
-                    <img src="./Assets/images/Day_Planner_Screenshot.png" class="card-img-top img-fluid" alt="Work_Day Scheduler">
+                    <img src="./Assets/images/Work_Day_Scheduler.gif" class="card-img-top img-fluid" alt="Work_Day Scheduler">
                     <div class="card-body d-flex flex-column justify-content-end">
                       <h5 class="card-title text-center"> Work Day Scheduler</h5>
                       <div class="d-inline-flex flex-column justify-content-center">
