--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <div class="container-fluid float-right">
             <a class="navbar-brand" href="#portfolio">Portfolio</a>
             <a class="navbar-brand" href="#contact">Contact Me</a>
-            <a class="navbar-brand" href="https://github.com/kevinjr1998">GitHub</a>
-            <a class="navbar-brand" href="https://www.linkedin.com/in/kevin-ryner/">LinkedIn</a>
+            <a target="_blank" class="navbar-brand" href="https://github.com/kevinjr1998">GitHub</a>
+            <a target="_blank" class="navbar-brand" href="https://www.linkedin.com/in/kevin-ryner/">LinkedIn</a>
           </div>
     </nav>
 
@@ -27,7 +27,7 @@
     </aside>
 
     <div id="#portfolio" class="jumbotron bg-light d-inline-flex flex-column justify justify-content-center align-items-center align-self-center border rounded m-3" style = "width: auto;" >
-        <h1 class="display-4">Project: Holiday Planner </h1>
+        <h1 class="display-4">Project: My 5STAR Local </h1>
         <img src="./Assets/images/my5StarLocal.gif " class="img-fluid img-thumbnail" alt="My-5-Star-Local">
         <div class="d-inline-flex flex-column align-items-center">
           <a target= "_blank" class="btn btn-primary m-2" href="https://github.com/kevinjr1998/My-5-Star-Local"> Link to GitHub Repository </a>
@@ -40,7 +40,7 @@
             <div class="card " style="width: auto; height: 100%;">
                 <img src="./Assets/images/techBlogGif.gif" class="card-img-top img-fluid" alt="Tech_Blog_Gif">
                 <div class="card-body d-flex flex-column justify-content-end">
-                  <h5 class="card-title text-center "> Code Quiz </h5>
+                  <h5 class="card-title text-center "> Tech Blog </h5>
                   <a target="_blank" href="https://github.com/kevinjr1998/Tech_Blog" class="btn btn-primary text-center m-2"> Link to GitHub Repository</a>
                   <a target="_blank" href="https://peaceful-basin-57768.herokuapp.com/" class="btn btn-primary text-center m-2"> Link to Deployed Application</a>
                 </div>
@@ -66,7 +66,7 @@
                 <div class="card"  style="width: auto; height: 100%;">
                     <img src="./Assets/images/Note_Taker_Screenshot.png" class="card-img-top img-fluid " alt="Password_Generator_Screenshot">
                     <div class="card-body d-flex flex-column justify-content-end">
-                      <h5 class="card-title text-center"> Password Generator</h5>
+                      <h5 class="card-title text-center"> Note Taker</h5>
                       <div class="d-inline-flex flex-column justify-content-center">
                           <a target="_blank" href="https://github.com/kevinjr1998/Note_Taker" class="btn btn-primary text-center m-2"> Link to GitHub Repository</a>
                           <a target="_blank" href="https://stark-headland-34041.herokuapp.com/" class="btn btn-primary text-center m-2"> Link to Deployed Application</a>
